Fix on small screens

--- a/static/sass/_pattern_navigation.scss
+++ b/static/sass/_pattern_navigation.scss
@@ -27,7 +27,7 @@ $ubuntu-logo-width--mobile: $ubuntu-logo-svg-width + 2 * $sph-inner;
     background-color: $nav-bg-color;
     flex-direction: column;
     position: static;
-    z-index: 40;
+    z-index: 102;
 
     &__items {
       @media (max-width: $breakpoint-x-small - 1) {
@@ -396,7 +396,7 @@ $ubuntu-logo-width--mobile: $ubuntu-logo-svg-width + 2 * $sph-inner;
       .p-search-box {
         margin-left: 1rem;
         max-width: none;
-        z-index: 50;
+        z-index: 102;
 
         .p-search-box__button {
           display: none;
@@ -419,7 +419,7 @@ $ubuntu-logo-width--mobile: $ubuntu-logo-svg-width + 2 * $sph-inner;
     top: 0;
     transition: opacity 0.5s ease-in-out;
     width: 100%;
-    z-index: 40;
+    z-index: 101;
   }
 
   .dropdown-window {
